--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-<<<<<<< HEAD
+
     "dev": "n  ver.js",
-=======
+
     "dev": "nodemon server.js",
->>>>>>> origin/master
+
     "start": "node server.js"
   },
   "repository": {
@@ -17,18 +17,21 @@
   },
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "16.14.2"
+  },
   "bugs": {
     "url": "https://github.com/Temirlan69/kinoticket/issues"
   },
   "homepage": "https://github.com/Temirlan69/kinoticket#readme",
   "dependencies": {
     "ejs": "^3.1.7",
-<<<<<<< HEAD
+
     "express": "^4.18.1",
     "mongoose": "^6.3.2",
-=======
+
     "express": "^4.17.3",
->>>>>>> origin/master
+
     "nodemon": "^2.0.15"
   }
 }
