--- a/package.json
+++ b/package.json
@@ -4,11 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-
-    "dev": "n  ver.js",
-
     "dev": "nodemon server.js",
-
     "start": "node server.js"
   },
   "repository": {
@@ -25,13 +21,13 @@
   },
   "homepage": "https://github.com/Temirlan69/kinoticket#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.0",
     "ejs": "^3.1.7",
-
-    "express": "^4.18.1",
-    "mongoose": "^6.3.2",
-
     "express": "^4.17.3",
-
+    "express-validator": "^6.14.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.3.2",
     "nodemon": "^2.0.15"
   }
 }
