--- a/package.json
+++ b/package.json
@@ -21,13 +21,20 @@
   },
   "homepage": "https://github.com/Temirlan69/kinoticket#readme",
   "dependencies": {
+    "-": "^0.0.1",
+    "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "ejs": "^3.1.7",
     "express": "^4.17.3",
+    "express-fileupload": "^1.3.1",
+    "express-session": "^1.17.3",
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
+    "method": "^2.0.0",
+    "method-override": "^3.0.0",
     "mongoose": "^6.3.2",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "override": "^0.0.1"
   }
 }
