--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^6.3.2",
     "nodemon": "^2.0.15",
-    "override": "^0.0.1"
+    "override": "^0.0.1",
+    "swagger-ui-express": "^4.4.0"
   }
 }
